<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsPhoto">

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="332dp"
        android:layout_height="298dp"
        android:contentDescription="@string/images_flickr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auteurDetail"
        app:layout_constraintBottom_toTopOf="@+id/datePrise"
        app:layout_constraintVertical_bias="0.42000002"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/titreDetail"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:text="@string/titre_image"
        android:paddingBottom="30dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/auteurDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auteurDetail"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/nom_auteur"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreDetail" />

    <TextView
        android:id="@+id/datePrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_prise"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/datePubli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageDetail"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/datePubli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/date_publication"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lienImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePrise"
        app:layout_constraintVertical_bias="0.48000002" />

    <TextView
        android:id="@+id/lienImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uri_lien"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePubli"
        app:layout_constraintBottom_toTopOf="@+id/boutonFavoris"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/boutonFavoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/ajouter_favoris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lienImage" />
</androidx.constraintlayout.widget.ConstraintLayout>